// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`ChangeAnswers Component renders the component with provided props 1`] = `
<div
  class="container-auto"
>
  <a
    class="gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none inline-flex items-center"
    data-testid="tool-nav-prev"
    href="/back"
  >
    <svgr-mock
      aria-hidden="true"
      class="w-[8px] h-[15px]"
    />
    <span>
      Change
    </span>
  </a>
  <div
    class="lg:max-w-[950px]"
  >
    <h1
      class="text-3xl md:text-5xl text-gray-800 font-bold"
    >
      Change
    </h1>
    <p
      class="mb-4 break-words"
      data-testid="paragraph"
    >
      Test text
    </p>
    <ul
      class="pt-2 pb-6 md:pt-4 md:pb-8"
    >
      <li>
        <form
          method="POST"
        >
          <input
            data-testid="urlData-1"
            name="urlData"
            type="hidden"
            value=""
          />
          <input
            data-testid="language-1"
            name="language"
            type="hidden"
            value="en"
          />
          <input
            data-testid="pagePath-1"
            name="pagePath"
            type="hidden"
            value="start/q-1"
          />
          <input
            data-testid="prefix-1"
            name="prefix"
            type="hidden"
            value="q-"
          />
          <dl
            class="grid grid-cols-1 pb-6 md:grid-cols-8 gap-x-7 md:border-b-1 border-slate-400 md:pb-2 md:mt-2"
          >
            <dt
              class="col-span-1 mb-2 text-base font-bold md:col-span-4"
              data-testid="q-1"
              id="q-1"
            >
              Question 1
            </dt>
            <dd
              class="col-span-1 mb-2 md:col-span-3 obfuscate"
              data-testid="a-1"
            >
              Answer 1
            </dd>
            <dd
              class="col-span-1"
            >
              <button
                aria-describedby="q-1"
                class="inline-flex items-center text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button gap-0 align-top"
                data-testid="change-question-1"
                formaction="/change-answer"
                name="questionNbr"
                type="submit"
                value="1"
              >
                <span />
                Change
                <span />
              </button>
            </dd>
          </dl>
        </form>
      </li>
      <li>
        <form
          method="POST"
        >
          <input
            data-testid="urlData-2"
            name="urlData"
            type="hidden"
            value=""
          />
          <input
            data-testid="language-2"
            name="language"
            type="hidden"
            value="en"
          />
          <input
            data-testid="pagePath-2"
            name="pagePath"
            type="hidden"
            value="start/q-2"
          />
          <input
            data-testid="prefix-2"
            name="prefix"
            type="hidden"
            value="q-"
          />
          <dl
            class="grid grid-cols-1 pb-6 md:grid-cols-8 gap-x-7 md:border-b-1 border-slate-400 md:pb-2 md:mt-2"
          >
            <dt
              class="col-span-1 mb-2 text-base font-bold md:col-span-4"
              data-testid="q-2"
              id="q-2"
            >
              Question 2
            </dt>
            <dd
              class="col-span-1 mb-2 md:col-span-3 obfuscate"
              data-testid="a-2"
            >
              Answer 2
            </dd>
            <dd
              class="col-span-1"
            >
              <button
                aria-describedby="q-2"
                class="inline-flex items-center text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button gap-0 align-top"
                data-testid="change-question-2"
                formaction="/change-answer"
                name="questionNbr"
                type="submit"
                value="2"
              >
                <span />
                Change
                <span />
              </button>
            </dd>
          </dl>
        </form>
      </li>
    </ul>
  </div>
  <div>
    <form
      action="/submit-api"
      method="POST"
    >
      <input
        name="urlData"
        type="hidden"
        value=""
      />
      <input
        name="cookieData"
        type="hidden"
        value=""
      />
      <input
        name="language"
        type="hidden"
        value="en"
      />
      <input
        name="currentFlow"
        type="hidden"
        value="start"
      />
      <input
        name="csrfToken"
        type="hidden"
      />
      <button
        class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button justify-center w-full m-auto md:w-auto md:justify-start"
        data-testid="submit-form"
        type="submit"
      >
        <span />
        Next
        <span />
      </button>
    </form>
  </div>
</div>
`;

exports[`ChangeAnswers Component renders warning message when on the telephone flow with immediate callback scheduled 1`] = `
<div
  class="container-auto"
>
  <a
    class="gap-2 text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none inline-flex items-center"
    data-testid="tool-nav-prev"
    href="/back"
  >
    <svgr-mock
      aria-hidden="true"
      class="w-[8px] h-[15px]"
    />
    <span>
      Change
    </span>
  </a>
  <div
    class="lg:max-w-[950px]"
  >
    <h1
      class="text-3xl md:text-5xl text-gray-800 font-bold"
    >
      Change
    </h1>
    <p
      class="mb-4 break-words"
      data-testid="paragraph"
    >
      Test text
    </p>
    <ul
      class="pt-2 pb-6 md:pt-4 md:pb-8"
    >
      <li>
        <form
          method="POST"
        >
          <input
            data-testid="urlData-1"
            name="urlData"
            type="hidden"
            value=""
          />
          <input
            data-testid="language-1"
            name="language"
            type="hidden"
            value="en"
          />
          <input
            data-testid="pagePath-1"
            name="pagePath"
            type="hidden"
            value="start/q-1"
          />
          <input
            data-testid="prefix-1"
            name="prefix"
            type="hidden"
            value="q-"
          />
          <dl
            class="grid grid-cols-1 pb-6 md:grid-cols-8 gap-x-7 md:border-b-1 border-slate-400 md:pb-2 md:mt-2"
          >
            <dt
              class="col-span-1 mb-2 text-base font-bold md:col-span-4"
              data-testid="q-1"
              id="q-1"
            >
              Question 1
            </dt>
            <dd
              class="col-span-1 mb-2 md:col-span-3 obfuscate"
              data-testid="a-1"
            >
              Answer 1
            </dd>
            <dd
              class="col-span-1"
            >
              <button
                aria-describedby="q-1"
                class="inline-flex items-center text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button gap-0 align-top"
                data-testid="change-question-1"
                formaction="/change-answer"
                name="questionNbr"
                type="submit"
                value="1"
              >
                <span />
                Change
                <span />
              </button>
            </dd>
          </dl>
        </form>
      </li>
      <li>
        <form
          method="POST"
        >
          <input
            data-testid="urlData-2"
            name="urlData"
            type="hidden"
            value=""
          />
          <input
            data-testid="language-2"
            name="language"
            type="hidden"
            value="en"
          />
          <input
            data-testid="pagePath-2"
            name="pagePath"
            type="hidden"
            value="start/q-2"
          />
          <input
            data-testid="prefix-2"
            name="prefix"
            type="hidden"
            value="q-"
          />
          <dl
            class="grid grid-cols-1 pb-6 md:grid-cols-8 gap-x-7 md:border-b-1 border-slate-400 md:pb-2 md:mt-2"
          >
            <dt
              class="col-span-1 mb-2 text-base font-bold md:col-span-4"
              data-testid="q-2"
              id="q-2"
            >
              Question 2
            </dt>
            <dd
              class="col-span-1 mb-2 md:col-span-3 obfuscate"
              data-testid="a-2"
            >
              Answer 2
            </dd>
            <dd
              class="col-span-1"
            >
              <button
                aria-describedby="q-2"
                class="inline-flex items-center text-magenta-500 visited:text-purple-700 focus:text-gray-800 focus:bg-yellow-400 focus:shadow-link-focus focus-within:outline-none underline hover:no-underline focus:no-underline cursor-pointer active:text-gray-800 active:underline active:bg-transparent active:shadow-none t-link-button gap-0 align-top"
                data-testid="change-question-2"
                formaction="/change-answer"
                name="questionNbr"
                type="submit"
                value="2"
              >
                <span />
                Change
                <span />
              </button>
            </dd>
          </dl>
        </form>
      </li>
    </ul>
    <div
      class="relative min-h-[95px] p-6 rounded-bl-3xl before:content-[""] before:block before:h-[80px] before:w-[8px] before:absolute before:left-0 before:top-0 before:rounded-bl-[8px] bg-yellow-150 before:bg-amber-500 mb-8"
      data-testid="callout-warning-telephone-confirm-warning"
    >
      Change
    </div>
  </div>
  <div>
    <form
      action="/submit-api"
      method="POST"
    >
      <input
        name="urlData"
        type="hidden"
        value=""
      />
      <input
        name="cookieData"
        type="hidden"
        value=""
      />
      <input
        name="language"
        type="hidden"
        value="en"
      />
      <input
        name="currentFlow"
        type="hidden"
        value="telephone"
      />
      <input
        name="csrfToken"
        type="hidden"
      />
      <button
        class="border-0 text-white bg-magenta-500 hover:bg-pink-800 active:bg-pink-900 active:outline-yellow-400 active:text-white t-button relative px-3 py-2 font-semibold rounded outline-none shadow-bottom-gray inline-flex items-center gap-2 cursor-pointer disabled:cursor-not-allowed disabled:border-slate-400 disabled:border disabled:bg-transparent disabled:text-gray-400 disabled:shadow-none focus:bg-yellow-400 focus:outline-blue-700 focus:outline-[3px] focus:outline-offset-0 focus:text-gray-800 focus:shadow-none focus:before:content-[""] focus:before:w-[calc(100%+6px)] focus:before:rounded-[0.45rem] focus:before:absolute focus:before:inset-0 focus:before:inset-x-[-3px] focus:before:inset-y-[-3px] focus:before:shadow-bottom-gray active:outline-[3px] active:outline-offset-0 active:shadow-inset active:before:content-[""] active:before:w-[calc(100%+6px)] active:before:rounded-[0.45rem] active:before:absolute active:before:inset-0 active:before:inset-x-[-3px] active:before:inset-y-[-3px] active:before:shadow-bottom-white t-primary-button justify-center w-full m-auto md:w-auto md:justify-start"
        data-testid="submit-form"
        type="submit"
      >
        <span />
        Next
        <span />
      </button>
    </form>
  </div>
</div>
`;
